/*
   Copyright 2023 The olive Authors

   This program is offered under a commercial and under the AGPL license.
   For AGPL licensing, see below.

   AGPL licensing:
   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU Affero General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU Affero General Public License for more details.

   You should have received a copy of the GNU Affero General Public License
   along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto3";

package olivepb;

option go_package = "github.com/olive-io/olive/api/olivepb;olivepb";

import "github.com/olive-io/olive/api/discoverypb/discovery.proto";

message OliveHeader {
  uint64 runner = 1;
  int64 rev = 2;
}

message ResponseHeader {
  // cluster_id is the ID of the cluster which sent the response.
  uint64 cluster_id = 1;
  // member_id is the ID of the member which sent the response.
  uint64 member_id = 2;
  // raft_term is the raft term when the request was applied.
  uint64 raft_term = 3;
}

message Member {
  // ID is the member ID for this member.
  uint64 ID = 1;
  // name is the human-readable name of the member. If the member is not started, the name will be an empty string.
  string name = 2;
  // peerURLs is the list of URLs the member exposes to the cluster for communication.
  repeated string peerURLs = 3;
  // clientURLs is the list of URLs the member exposes to clients for communication. If the member is not started, clientURLs will be empty.
  repeated string clientURLs = 4;
  // isLearner indicates if the member is raft learner.
  bool isLearner = 5;
}

message Meta {
  uint64 clusterId = 1;
  uint64 leader = 2;
  repeated MetaMember members = 3;
}

message MetaMember {
  uint64 id = 1;
  repeated string clientURLs = 2;
  repeated string peerURLs = 3;
}

message Runner {
  // unique name of the runner
  string name = 1;
  // listenURL is the URL the runner is listening on.
  string listenURL = 2;
  string version = 3;
  int64 heartbeatMs = 4;
  string hostname = 5;

  uint64 cpu = 21;
  uint64 memory = 22;
  uint64 diskSize = 23;
}

enum State {
  UnKnown = 0;
  Ready = 1;
  NotReady = 2;
  Alarm = 3;
}

message RunnerStatistics {
  string id = 1;
  double cpuUsed = 11;
  double memoryUsed = 12;

  uint64 bpmnProcesses = 21;
  uint64 bpmnEvents = 22;
  uint64 bpmnTasks = 23;

  State state = 101;
  string error = 102;
  int64 timestamp = 103;
}

message Definition {
  OliveHeader header = 100;

  string id = 1;
  string name = 2;
  bytes content = 3;
  uint64 version = 4;
}

enum FlowNodeType {
  FlowNodeUnknown = 0;
  StartEvent = 1;
  EndEvent = 2;
  BoundaryEvent = 3;

  Task = 100;
  UserTask = 101;
  ServiceTask = 102;
  ScriptTask = 103;
  SendTask = 104;
  ReceiveTask = 105;
  ManualTask = 106;
  CallActivity = 107;
  SubProcess = 108;

  EventBasedGateway = 200;
  ParallelGateway = 201;
  InclusiveGateway = 202;
  ExclusiveGateway = 203;
}

message BpmnArgs {
  map<string, string> headers = 1;
  map<string, bytes> properties = 2;
  map<string, bytes> dataObjects = 3;
}

message ProcessContext {
  map<string, bytes> properties = 1;
  map<string, bytes> dataObjects = 2;
  map<string, bytes> variables = 3;
}

enum ProcessStatus {
  ProcessUnknown = 0;
  Waiting = 1;
  Prepare = 2;
  Running = 3;
  Ok = 4;
  Fail = 5;
}

message ProcessInstance {
  uint64 id = 1;
  string name = 2;
  string definitionsId = 3;
  uint64 definitionsVersion = 4;
  string definitionsProcess = 5;
  bytes definitionsContent = 6;
  BpmnArgs args = 7;

  ProcessContext context = 15;
  repeated string flowNodes = 16;
  map<string, FlowNodeStat> flowNodeStatMap = 17;
  int32 attempts = 18;
  int64 startTime = 19;
  int64 endTime = 20;

  ProcessStatus status = 21;
  string message = 22;
}

message FlowNode {
  FlowNodeType type = 1;
  string id = 2;
}

message FlowNodeStat {
  string id = 1;
  string name = 2;
  ProcessContext context = 3;
  int32 retries = 4;
  string message = 5;

  int64 startTime = 11;
  int64 endTime = 12;
}
